containers/updategraphproxy/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: updategraphproxy
  namespace: updategraphproxy
  labels:
    app: updategraphproxy
    app.kubernetes.io/component: updategraphproxy
    app.kubernetes.io/instance: updategraphproxy
    app.kubernetes.io/name: updategraphproxy
    app.kubernetes.io/part-of: updategraphproxy-app
    app.openshift.io/runtime: nginx
    app.openshift.io/runtime-namespace: updategraphproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: updategraphproxy
  template:
    metadata:
      #creationTimestamp: null
      labels:
        app: updategraphproxy
        deployment: updategraphproxy
    spec:
      containers:
        - name: updategraphproxy
          image: 'harbor.spenscot.ddns.net/library/updategraphproxy:0.7'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
            requests:
              memory: "128Mi"
              cpu: "1m"
          livenessProbe:
            httpGet:
              # This path checks access through the proxy to the API 
              path: /api/upgrades_info/v1/graph?channel=stable
              port: 8080
            initialDelaySeconds: 15  # Wait 15s after starting before checking
            periodSeconds: 30        # Check every 30s              
          readinessProbe:
            httpGet:
              # This path checks access through the proxy to the API             
              path: /api/upgrades_info/v1/graph?channel=stable
              port: 8080
            initialDelaySeconds: 10  # Wait 10s after starting before checking
            periodSeconds: 30        # Check every 30s                       
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
